--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,5 @@
 {
-    "fwrpg-for-pbta": {
+    "fwrpg": {
         "Settings": {
             "Title": "Override Setting Selections",
             "Hint": "The Fantasy World RPG module automatically hides all PbtA sheet options (formula, forward, ongoing, etc.), except for roll mode. If you want to make your own selections, please check this option off."
