--- a/lang/it.json
+++ b/lang/it.json
@@ -1,148 +1,19 @@
 {
-  "Powered by the Apocalypse": "Powered by the Apocalypse",
-  "PBTA": {
-    "Advantage": "Vantaggio",
-    "Ask": "Ask",
-    "AskTitle": "Choose a stat",
-    "Biography": "Biography",
-    "Choices": "Choices",
-    "ConditionsApplied": "Conditions Applied:",
-    "Create": "Create",
-    "Description": "Descrizione",
-    "description": "Run games for any PbtA system in FoundryVTT!",
-    "Disadvantage": "Svantaggio",
-    "Equipment": "Equipaggiamento",
-    "EquipmentType": "Equipment Type",
-    "failure": "Complications (mark XP)",
-    "Formula": "Custom Roll Formula",
-    "Forward": "Forward",
-    "Modifier": "Modifier",
-    "MoveGroup": "Move Group",
-    "MoveGroupHelp": "Multiple moves with the same move-group will be either/or selections when creating a new character using the character builder.",
-    "Moves": "Moves",
-    "MoveType": "Move Type",
-    "New": "New",
-    "Normal": "Normal",
-    "NoTemplate": "No Template",
-    "Ongoing": "Ongoing",
-    "partial": "Partial Success",
-    "Playbook": "Playbook",
-    "Prompt": "Prompt",
-    "PromptTitle": "Enter your modifier",
-    "Qty": "Qty",
-    "Quantity": "Quantity",
-    "RequiresMove": "Requires Move",
-    "Roll": "Roll",
-    "RollFormula": "Roll Formula",
-    "RollFormulaOverride": "Roll Formula Override",
-    "RollMove": "Roll Move",
-    "success": "Success",
-    "Tags": "Tags",
-    "TagsHelp": "(Use tab to autocomplete, commas to create new tags, and double click a tag to edit it)",
-    "title": "Powered by the Apocalypse",
-    "Uses": "Uses",
-    "Weight": "Weight",
-    "Wt": "Wt",
-    "Common": {
-      "Description": "Description",
-      "Details": "Details",
-      "Name": "Name"
-    },
-    "Dialog": {
-      "Ask1": "Choose a stat for this",
-      "Ask2": "move.",
-      "ChooseConditions": "Choose all conditional modifiers that apply:",
-      "Prompt1": "Choose the modifier for this",
-      "Prompt2": "move."
-    },
-    "Messages": {
-      "sheetConfig": {
-        "actorTypeRequired": "actor type is required.",
-        "attribute": "Attribute",
-        "attributeMax": "must include a 'max' property.",
-        "attributeOptions": "must include an 'options' group",
-        "attributeOptionsEmpty": "must include at least one option in the 'options' group.",
-        "attributeType": "must be one of the following types:",
-        "attributeTypeNull": "doesn't have a type (may be options that had the parent renamed).",
-        "equipmentTypes": "is required and must have at least one equipment type.",
-        "groupAttributes": "must be a group of attributes.",
-        "moveTypes": "is required and must have at least one move type.",
-        "noConfig": "No sheet config has been entered.",
-        "reset": "Reset sheet config.",
-        "rollFormulaRequired": "'rollFormula' is required.",
-        "rollResultsIncorrect": "'rollResults' entered incorrectly.",
-        "rollResultsRequired": "'rollResults' is required",
-        "statsRequired1": "'stats' are required for",
-        "statsRequired2": "group.",
-        "statString1": "Stat",
-        "statString2": "must be a string, such as \"Cool\"",
-        "tomlError": "There's a syntax error in your TOML configuration on line {line} at column {column}. See console for more details."
+   "fwrpg":{
+      "Settings":{
+         "Title":"Override Setting Selections",
+         "Hint":"The Fantasy World RPG module automatically hides all PbtA sheet options (formula, forward, ongoing, etc.), except for roll mode. If you want to make your own selections, please check this option off."
+      },
+      "rollResult":{
+         "success": "Favore maggiore!",
+         "partial": "Favore minore",
+         "miss": "Intoppo"
+   },
+      "statLabel":{
+         "daring": "Audace",
+         "intense": "Intenso",
+         "knowing": "Sapiente",
+         "vigilant": "Vigile"
       }
-    },
-    "Settings": {
-      "button": {
-        "help": "PbtA System Help & Tutorial"
-      },
-      "stats": {
-        "name": "Stats",
-        "hint": "Enter a comma-separated list of stats/abilities, such as \"Str,Dex,Con,Int,Wis,Cha\""
-      },
-      "advForward": {
-        "name": "Clear ADV/DIS After Rolls",
-        "hint": "If enabled, advantage and disadvantage choices on the character sheet will be reset to normal after each roll (similar to Forward)."
-      },
-      "hideRollFormula": {
-        "name": "Hide roll formula",
-        "hint": "Hides custom roll formula input on character sheets."
-      },
-      "hideForward": {
-        "name": "Hide forward",
-        "hint": "Hides forward input on character sheets."
-      },
-      "hideOngoing": {
-        "name": "Hide ongoing",
-        "hint": "Hides ongoing input on character sheets."
-      },
-      "hideRollMode": {
-        "name": "Hide roll mode",
-        "hint": "Hides roll mode override (normal/advantage/disadvantage) on character sheets."
-      },
-      "hideUses": {
-        "name": "Hide uses",
-        "hint": "Hides uses remaining for each move on the move's summary for characters and NPCs."
-      },
-      "itemIcons": {
-        "name": "Enable Item Icons",
-        "hint": "Enable visual icons for moves, spells, and equipment in character sheets (requires browser reload)."
-      },
-      "sheetConfig": {
-        "label": "PbtA Sheet Configuration",
-        "name": "Configure character sheets",
-        "hint": "Choose the data structure for character sheets, such as stats, abilities, and details.",
-        "additions": "Additions:",
-        "confirm": "Confirm",
-        "confirmChanges": "Confirm Changes",
-        "confirmUpdate": "Confirm + Update",
-        "cosmetic": "Cosmetic changes (label or description):",
-        "deletions": "Deletions:",
-        "maxValue": "Max value changed:",
-        "noteCancel": "Cancel and prevent the changes from saving",
-        "noteChangesDetected": "Changes have been detected in one or more of your actor types. Review the changes below, and then choose one of the following:",
-        "noteConfirm": "Confirm without updating existing actors",
-        "noteConfirmUpdate": "Confirm and update existing actors",
-        "noteConfirmUpdateBold": "NOTE: Existing data in deleted attributes will be deleted permanently",
-        "notes1": "Welcome to the alpha version of the PbtA system!",
-        "notes2": "We will eventually have a graphical user interface (GUI) to build character sheets, but for now you'll need to enter character sheet data in TOML format. Writing TOML is similar to working with .ini files common in modding settings for PC games.",
-        "notes3": "Read through the documentation linked below before configuring your sheet. You can also head over to the #powered-by-the-apocalypse channel of the main Foundry Virtual Tabletop Discord for questions and assistance.",
-        "options": "List options changed (values will be preserved):",
-        "resetDefaults": "Reset Defaults",
-        "saveConfiguration": "Save Configuration",
-        "title": "Configure character sheets",
-        "type": "Type changed:",
-        "typeReset": "Type changed (attribute will be reset):",
-        "sheetConfigDisabledModule": "Sheet configuration has been disabled due to a module that is providing it."
-      }
-    }
-  },
-  "PBTA_OTHER": "Other"
+}
 }
