--- a/lang/it.json
+++ b/lang/it.json
@@ -5,15 +5,23 @@
          "Hint":"The Fantasy World RPG module automatically hides all PbtA sheet options (formula, forward, ongoing, etc.), except for roll mode. If you want to make your own selections, please check this option off."
       },
       "rollResult":{
-         "success": "Favore maggiore!",
-         "partial": "Favore minore",
-         "miss": "Intoppo"
-   },
+         "success":"Favore maggiore!",
+         "partial":"Favore minore",
+         "miss":"Intoppo"
+      },
       "statLabel":{
-         "daring": "Audace",
-         "intense": "Intenso",
-         "knowing": "Sapiente",
-         "vigilant": "Vigile"
+         "daring":"Audace",
+         "intense":"Intenso",
+         "knowing":"Sapiente",
+         "vigilant":"Vigile",
+         "blood":"Sangue",
+         "kin":"Appartenenza",
+         "issue":"Problema",
+         "doubt":"Dubbio",
+         "expedience":"Punti espediente",
+         "growth":"crescita",
+         "look":"Aspetto",
+         "hp":"Punti fermezza"
       }
-}
+   }
 }
