--- a/lang/it.json
+++ b/lang/it.json
@@ -15,13 +15,18 @@
          "knowing":"Sapiente",
          "vigilant":"Vigile",
          "doubt":"Dubbio",
-         "expedience":"Punti espediente",
+         "expedience":"Espediente",
          "hp":"Punti fermezza",
          "Growth":"Crescita",
          "Blood":"Sangue",
          "Kin":"Appartenenza",
          "Look":"Aspetto",
          "Issue":"Problema"
+      },
+      "statDescription":{
+         "expedienceDesc":"Spendi 2 PE prima di un tiro per ottenere Vantaggio (puoi farlo più volte).",
+         "growthDesc":"Spendi 5 o 10 PE per marcare Crescite *",
+         "hpDesc":"Spendi 1 PF per ridurre il danno di un livello:/nMortale > Serio > Temp > Nessun danno"
       }
    },
    "FWRPG-SHEET":{
