--- a/lang/it.json
+++ b/lang/it.json
@@ -26,7 +26,7 @@
       "statDescription":{
          "expedienceDesc":"Spendi 2 PE prima di un tiro per ottenere Vantaggio (puoi farlo più volte).",
          "growthDesc":"Spendi 5 o 10 PE per marcare Crescite *",
-         "hpDesc":"Spendi 1 PF per ridurre il danno di un livello:/nMortale > Serio > Temp > Nessun danno"
+         "hpDesc":"Spendi 1 PF per ridurre il danno di un livello:\nMortale > Serio > Temp > Nessun danno"
       }
    },
    "FWRPG-SHEET":{
