--- a/lang/en.json
+++ b/lang/en.json
@@ -79,6 +79,8 @@
    "PBTA":{
       "Description":"Description",
       "Moves":"Moves",
-      "Equipment":"Equipment"
+      "Equipment":"Equipment",
+      "Biography": "Biography",
+      "Playbook": "Playbook"
    }
 }
