--- a/lang/it.json
+++ b/lang/it.json
@@ -78,6 +78,8 @@
    "PBTA":{
       "Description":"Descrizione",
       "Moves":"Mosse",
-      "Equipment":"Equipaggiamento"
+      "Equipment":"Equipaggiamento",
+      "Biography": "Biografia",
+      "Playbook": "Classe"
    }
 }
