--- a/lang/it.json
+++ b/lang/it.json
@@ -29,44 +29,41 @@
          "hpDesc":"Spendi 1 PF per ridurre il danno di un livello:\nMortale > Serio > Temp > Nessun danno"
       },
       "harmLabel":{
-         "temp": "DAMNI TEMPORANEI",
-         "serious": "DAMNI SERI",
-         "deadly": "DAMNI MORTALI",
-
-         "tempEffect0": "Appari e ti senti un disastro: sanguinante, ammaccato e lacero.",
-         "tempEffect1": "Perdi il possesso di qualcosa d'importante che stavi trasportando o indossando.",
-         "tempEffect2": "Perdi l'equilibrio o finisci in una posizione Problematica.",
-         "tempEffect3": "Sei trattenuto da qualcosa che ti afferra/avviluppa/impaccia.",
-         "tempEffect4": "Sei fuori gioco, incosciente o impotente finché il Mondo non dice altrimenti.",
-
-         "seriousEffect0": "Una brutta e profonda lesione che, dopo la guarigione, lascerà una cicatrice permanente (fanne un'Etichetta).",
-         "seriousEffect1": "Dolore e traumi ti ostacolano attivamente nel fare qualsiasi cosa richieda sforzo o impegno.",
-         "seriousEffect2": "Uno o più dei tuoi arti è rotto o dilaniato, per ora inutilizzabile.",
-         "seriousEffect3": "Uno dei tuoi occhi o orecchie è rovinato, per sempre limitando i tuoi sensi (fanne un'Etichetta).",
-
-         "deadlyEffect0": "Le tue condizioni sono brutte e porteranno a complicazioni; morirai in pochi giorni.",
-         "deadlyEffect1": "Le tue condizioni peggioreranno rapidamente; morirai in poche ore.",
-         "deadlyEffect2": "Il tuo cuore smette di battere; sei morto o morirai nel giro di secondi."
+         "temp":"DAMNI TEMPORANEI",
+         "serious":"DAMNI SERI",
+         "deadly":"DAMNI MORTALI",
+         "tempEffect0":"Appari e ti senti un disastro: sanguinante, ammaccato e lacero.",
+         "tempEffect1":"Perdi il possesso di qualcosa d'importante che stavi trasportando o indossando.",
+         "tempEffect2":"Perdi l'equilibrio o finisci in una posizione Problematica.",
+         "tempEffect3":"Sei trattenuto da qualcosa che ti afferra/avviluppa/impaccia.",
+         "tempEffect4":"Sei fuori gioco, incosciente o impotente finché il Mondo non dice altrimenti.",
+         "seriousEffect0":"Una brutta e profonda lesione che, dopo la guarigione, lascerà una cicatrice permanente (fanne un'Etichetta).",
+         "seriousEffect1":"Dolore e traumi ti ostacolano attivamente nel fare qualsiasi cosa richieda sforzo o impegno.",
+         "seriousEffect2":"Uno o più dei tuoi arti è rotto o dilaniato, per ora inutilizzabile.",
+         "seriousEffect3":"Uno dei tuoi occhi o orecchie è rovinato, per sempre limitando i tuoi sensi (fanne un'Etichetta).",
+         "deadlyEffect0":"Le tue condizioni sono brutte e porteranno a complicazioni; morirai in pochi giorni.",
+         "deadlyEffect1":"Le tue condizioni peggioreranno rapidamente; morirai in poche ore.",
+         "deadlyEffect2":"Il tuo cuore smette di battere; sei morto o morirai nel giro di secondi."
       },
       "moveTypeLabel":{
-         "commonMoves": "Mosse Communi",
-         "startingMoves": "Mosse Iniziali",
-         "growthMoves": "Mosse di Crescita",
-         "worldAction": "Reazioni del Mondo"
+         "commonMoves":"Mosse Communi",
+         "startingMoves":"Mosse Iniziali",
+         "growthMoves":"Mosse di Crescita",
+         "worldAction":"Reazioni del Mondo"
       },
       "equipmentTypeLabel":{
-         "gear": "Equipaggiamento"
+         "gear":"Equipaggiamento"
       },
       "npcLabel":{
-         "type": "Tipo | Generi",
-         "impulse": "Impulso",
-         "cast": "Cast",
-         "connections": "Connessioni",
-         "reactions": "Reazioni",
-         "fate": "Fato",
-         "notes": "Note"
+         "type":"Tipo | Generi",
+         "impulse":"Impulso",
+         "cast":"Cast",
+         "connections":"Connessioni",
+         "reactions":"Reazioni",
+         "fate":"Fato",
+         "notes":"Note"
       }
-      },
+   },
    "FWRPG-SHEETS":{
       "Growth":"Crescita",
       "Blood":"Sangue",
@@ -75,11 +72,33 @@
       "Issue":"Problema",
       "Doubt":"Dubbio"
    },
+   "TYPES": {
+      "Actor": {
+        "character": "Protagonista",
+        "npc": "Agente",
+        "other": "Altro"
+      },
+      "Item": {
+        "move": "Mosse",
+        "npcMove": "Mosse dell'agente",
+        "equipment": "Equipaggiamentont",
+        "playbook": "Manuale di classe",
+        "tag": "Etichetta"
+      }
+    },
    "PBTA":{
       "Description":"Descrizione",
       "Moves":"Mosse",
       "Equipment":"Equipaggiamento",
-      "Biography": "Biografia",
-      "Playbook": "Classe"
-   }
+      "Biography":"Biografia",
+      "Playbook":"Classe",
+      "Advantage":"Vantaggio",
+      "Disadvantage":"Svantaggio",
+      "RollMode":"Modalità rotolo",
+      "Normal":"Normale",
+      "ViewPlaybook":"Visualizza il manuale",
+      "Name":"Nome",
+      "Other":"Altro"
+   },
+   "PBTA_OTHER": "Altro"
 }
