--- a/lang/en.json
+++ b/lang/en.json
@@ -32,17 +32,17 @@
          "temp":"TEMP HARM",
          "serious":"SERIOUS HARM",
          "deadly":"DEADLY HARM",
-         "tempEffect0":"You look and feel like a mess: bloody, bruised, and torn up",
-         "tempEffect1":"You lose hold of something important you were carrying or wearing",
-         "tempEffect2":"You lose footing or end up in a problematic position",
-         "tempEffect3":"You are held by something that clutches/ tangles/impedes you",
-         "tempEffect4":"You are out cold, unconscious or powerless until the World says otherwise",
-         "seriousEffect0":"An open and vicious gash that, after healing, will leave a permanent scar (make a Tag of this)",
-         "seriousEffect1":"You are actively impeded by pain and injury in doing anything requiring effort or strain",
-         "seriousEffect2":"You broke or mangled one or more of your limbs, which are now inoperable",
-         "seriousEffect3":"One of your eyes or ears is ruined, forever hampering your senses (make a Tag of this)",
-         "deadlyEffect0":"Your condition is bad and will develop complications; you will die within a few days",
-         "deadlyEffect1":"Your condition deteriorates rapidly; you will die within a few hours",
+         "tempEffect0":"You look and feel like a mess: bloody, bruised, and torn up.",
+         "tempEffect1":"You lose hold of something important you were carrying or wearing.",
+         "tempEffect2":"You lose footing or end up in a problematic position.",
+         "tempEffect3":"You are held by something that clutches/tangles/ impedes you.",
+         "tempEffect4":"You are out cold, unconscious or powerless until the World says otherwise.",
+         "seriousEffect0":"An open and vicious gash that, after healing, will leave a permanent scar (make a Tag of this).",
+         "seriousEffect1":"You are actively impeded by pain and injury in doing anything requiring effort or strain.",
+         "seriousEffect2":"You broke or mangled one or more of your limbs, which are now inoperable.",
+         "seriousEffect3":"One of your eyes or ears is ruined, forever hampering your senses (make a Tag of this).",
+         "deadlyEffect0":"Your condition is bad and will develop complications; you will die within a few days.",
+         "deadlyEffect1":"Your condition deteriorates rapidly; you will die within a few hours.",
          "deadlyEffect2":"Your heart stops beating; you are dead or will die in a matter of seconds."
       },
       "moveTypeLabel":{
